--- a/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
@@ -50,6 +50,7 @@
                 <button type="button" class="btn btx-xs btn-feat" ng-class="{'BRANCH_REALIMAGE':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('BRANCH_REALIMAGE')">实景图</button>
                 <button type="button" class="btn btx-xs btn-feat" ng-class="{'BRANCH_SIGNASREAL':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('BRANCH_SIGNASREAL')">实景看板</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'TRAFFIC_SIGNAL':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('TRAFFIC_SIGNAL')">信号灯</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'RD_GATE':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('RD_GATE')">大门</button>
             </li>
         </ul>
     </div>
