--- a/scripts/components/road/tpls/attr_node_tpl/rdNodeFormTpl.html
+++ b/scripts/components/road/tpls/attr_node_tpl/rdNodeFormTpl.html
@@ -1,4 +1,4 @@
-<div class="fm-component" ng-controller="rdNodeFromController" >
+<div class="fm-component" ng-controller="rdNodeFormController" >
     <div class="title">
         道路点
         <span class="label label-info" >{{rdNodeData.pid}}</span>
