修改rdLink名称不能增加修改的bug，修改限速页面显示

--- a/scripts/components/road/tpls/attr_link_tpl/namesOfDetailTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/namesOfDetailTpl.html
@@ -15,7 +15,7 @@
                 </span>
             </div>
         </li>
-        <li class="list-group-item" id="name" style="display: none">
+        <li class="list-group-item" id="name" style="display: none;width: 95%;">
             <div class="pic-show">
                 <div class="option-hide">
                         <span aria-hidden="true" class="glyphicon glyphicon-remove-sign" ng-click="hidePicSelect($event)"></span>
