--- a/scripts/components/road/tpls/attr_speedLimit_tpl/speedLimitTpl.html
+++ b/scripts/components/road/tpls/attr_speedLimit_tpl/speedLimitTpl.html
@@ -19,7 +19,7 @@
                         <li>
                             <label>限速值</label>
                             <div>
-                                <input type="text" ng-model="speedLimitData.speedValue"/>km/h
+                                <input type="text" ng-model="speedLimitData.speedValue" style="width: 70%;"/>km/h
                             </div>
                         </li>
                         <li>
