--- a/scripts/components/road/tpls/attr_link_tpl/speedOfConditionTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/speedOfConditionTpl.html
@@ -62,11 +62,7 @@
             </div>
         </li>
         <li class="list-group-item">
-            <div><label class="control-label">时间段</label></div>
-            <div class="inline">
-                <input type="text"
-                       ng-model="oridiData.timeDomain">
-            </div>
+            <div ng-include="dateURL" class="muti-date" date-str='{{oridiData.timeDomain}}' style="width:100%;padding: 5px;"></div>
         </li>
     </ul>
     </form>
