修改检查结果总数，调试信号灯，增加信号灯选择

--- a/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
@@ -52,6 +52,7 @@
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'TRAFFIC_SIGNAL':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('TRAFFIC_SIGNAL')">信号灯</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'RD_GATE':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('RD_GATE')">大门</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'RD_GATE':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('RD_WARNINGINFO')">警示信息</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'ELECTRONIC_EYE':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('ELECTRONIC_EYE')">电子眼</button>
             </li>
         </ul>
     </div>
