--- a/less/editor.less
+++ b/less/editor.less
@@ -413,6 +413,7 @@ label > input[type='checkbox'] {
   overflow-y: auto;
   z-index: 1;
   width: 100%;
+  height: 100%;
 }
 
 .fm-component > div.title {
