增加电子眼渲染，数据面板，图层

--- a/scripts/components/road/tpls/attr_trafficSignal_tpl/trafficSignalTpl.html
+++ b/scripts/components/road/tpls/attr_trafficSignal_tpl/trafficSignalTpl.html
@@ -1,7 +1,7 @@
 <div class="fm-component" ng-controller="trafficSignalCtl">
     <div class="title">
         信号灯PID
-        <span class="label label-info"></span>
+        <span class="label label-info">{{trafficSignalData.pid}}</span>
     </div>
     <div class="content scroll-styled dark" style="height:90%;">
         <form name="rdGscForm">
