电子眼新建和编辑

--- a/scripts/components/road/tpls/attr_electronic_tpl/electronicEyeTpl.html
+++ b/scripts/components/road/tpls/attr_electronic_tpl/electronicEyeTpl.html
@@ -121,7 +121,7 @@
                         <li>
                             <label class="control-label">电子眼坐标</label>
                             <div>
-                                <input type="text" ng-model="electronicEyeData.geometry"/>
+                                ({{electronicEyeData.geometry.coordinates.join(',')}})
                             </div>
                         </li>
                     </ul>
