--- a/scripts/components/road/tpls/attr_warninginfo_tpl/warningInfoTpl.html
+++ b/scripts/components/road/tpls/attr_warninginfo_tpl/warningInfoTpl.html
@@ -26,16 +26,16 @@
                         <label>标牌类型</label>
                         <div>
                             <input type="text" class="fm-control" ng-model="rdWarningInfoObj.typeCode" ng-keydown="showPicSelect()"/>
-                            <div class="pic-show" ng-show="showImgData" style="display: block;">
-                                <div class="option-hide">
+                            <div class="fm-pic-show" ng-show="showImgData" style="display: block;">
+                                <div class="fm-option-hide">
                                     <button type="button" class="close" aria-label="Close" ng-click="hidePicSelect($event)">
                                         <span aria-hidden="true" class="glyphicon glyphicon-remove-sign"></span>
                                     </button>
                                 </div>
-                                <div class="pic-show-well">
-                                    <div class="img-well" ng-repeat="picture in pictures" ng-click="selectPicCode(picture.fileName)">
-                                        <img class="show-img" ng-src="{{picture.fileContent}}" title="{{picture.fileName}}">
-                                        <div class="img-describe">{{picture.fileName}}</div>
+                                <div class="fm-pic-show-well">
+                                    <div class="fm-img-well" ng-repeat="picture in pictures" ng-click="selectPicCode(picture.code)">
+                                        <img ng-src="{{picture.src}}" title="{{picture.name}}">
+                                        <div class="img-describe">{{picture.code}}</div>
                                     </div>
                                 </div>
                                 <div class="clearfix"></div>
