--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -331,6 +331,55 @@ label > input[type='checkbox'] {
 .fm-component div.title span.label-info {
   background-color: gray;
 }
+/***************图片搜索*****************/
+.fm-pic-show {
+  position: absolute;
+  border: 1px solid #fff;
+  z-index: 999;
+  border-radius: 4px;
+  padding-left: 4px;
+  padding-top: 6px;
+  padding-bottom: 7px;
+  background-color: #333;
+  box-shadow: 4px 4px 7px 0px #777;
+  -webkit-box-shadow: 4px 4px 7px 0px #777;
+  -moz-box-shadow: 4px 4px 7px 0px #777;
+  min-width: 60%;
+  min-height: 193px;
+  width: 70%;
+}
+.fm-pic-show .fm-option-hide {
+  position: absolute;
+  right: -4px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  top: -3px;
+}
+.fm-pic-show .fm-pic-show-well {
+  min-width: 100%;
+  min-height: 246px;
+}
+.fm-pic-show .fm-pic-show-well .fm-img-well {
+  float: left;
+  padding: 3px;
+  border: solid 1px #F3F6FA;
+  border-radius: 4px;
+  margin: 4px;
+  cursor: pointer;
+  width: 45%;
+  text-align: center;
+}
+.fm-pic-show .fm-pic-show-well .fm-img-well img {
+  width: 65px;
+  height: 55px;
+}
+.fm-pic-show .fm-pic-show-well .fm-img-well div {
+  background-color: #777;
+  color: #fff;
+  font-size: 11px;
+  text-align: center;
+  margin-top: 2px;
+}
 /************************* 图片资源 ******************************/
 .icon_3d {
   background-image: url("../../images/poi/icon/3D.png");
