--- a/scripts/components/tools/tpls/assist-tools/autofillJobPanelTpl.html
+++ b/scripts/components/tools/tpls/assist-tools/autofillJobPanelTpl.html
@@ -1,51 +1,18 @@
-<style>
-    h4{
-        padding-left: 10px;;
-        font-size: 16px;
-    }
-    .autohandle label{
-        display: block;
-        padding-left: 35px;
-    }
-    .autohandle label,input{
-        cursor: pointer;
-    }
-    .autohandle{
-        padding: 0 0 15px 0px;
-    }
-    .btngroup{
-        text-align: center;
-    }
-</style>
-<div class="fm-panel">
+<div class="fm-panel" ng-controller="AutofileJobPanelCtrl" style="margin:0px;">
     <div class="title">自动录入</div>
     <div class="content">
-        <div>执行以下tips录入:</div>
-        <div>
-            <label>
-                <input type="checkbox" name="" value=""> 测线
-            </label>
-            <label>
-                <input type="checkbox" name="" value=""> 种别
-            </label>
-            <label>
-                <input type="checkbox" name="" value=""> 车道数
+        <div>执行以下Tips录入:</div>
+        <div class="row scroll-styled dark" style="max-height: 200px;margin:5px;">
+            <label ng-repeat="item in tipList" class="col-md-4">
+                <input type="checkbox" name="tipList" ng-model="selectedTips[item.id]" ng-value="item.id"> {{item.name}}
             </label>
         </div>
-        <div>
-            <label>
-                <input type="checkbox" name="" value=""> SA
-            </label>
-            <label>
-                <input type="checkbox" name="" value=""> PA
-            </label>
-            <label>
-                <input type="checkbox" name="" value=""> 匝到
-            </label>
+        <!-- 进度条 -->
+        <div class="progress fm-progress" style="margin:8px;">
+            <div class="progress-bar progress-bar-info progress-bar-striped fm-progress-bar" ng-style="{'width': progress + '%'}"></div>
         </div>
-        <div class="btngroup">
-            <button type="button" class="btn btn-xs" style="color:white;background: rgba(150,150,150,0.5);padding: 3px 12px" ng-click="handleMethod('auto')">执　　行</button>
-            <button type="button" class="btn btn-xs" style="color:white;background: rgba(150,150,150,0.5);padding: 3px 12px" ng-click="closeToolwindow()">关　　闭</button>
+        <div style="text-align:center;">
+            <button type="button" ng-disabled="running" class="btn btn-main" ng-click="doExecute()">执  行</button>
         </div>
     </div>
 </div>
