--- a/scripts/components/road/tpls/attr_warninginfo_tpl/warningInfoTpl.html
+++ b/scripts/components/road/tpls/attr_warninginfo_tpl/warningInfoTpl.html
@@ -71,6 +71,9 @@
                             <input type="text"  ng-model="rdWarningInfoObj.descript" >
                         </div>
                     </li>
+                    <li>
+                        <div ng-include="dateURL" class="muti-date" date-str='{{oridiData.timeDomain}}' style="width:100%;padding: 5px;"></div>
+                    </li>
                 </ul>
             </form>
         </div>
