--- a/scripts/components/tools/tpls/assist-tools/autofillJobPanelTpl.html
+++ b/scripts/components/tools/tpls/assist-tools/autofillJobPanelTpl.html
@@ -1,4 +1,4 @@
-<div class="fm-panel" ng-controller="AutofileJobPanelCtrl" style="margin:0px;">
+<div class="fm-panel" ng-controller="AutofillJobPanelCtrl" style="margin:0px;">
     <div class="title">自动录入</div>
     <div class="content">
         <div>执行以下Tips录入:</div>
