新建电子眼解决报错，修改配置

--- a/less/editor.less
+++ b/less/editor.less
@@ -1515,7 +1515,7 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
 
 /*-------------------------------------------------地图缩放等级-----------------------------------------------*/
 
-.div_float {
+.div-float {
   position: absolute;
   z-index: 1;
 }
