--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -315,7 +315,6 @@ label > input[type='checkbox'] {
   overflow-y: auto;
   z-index: 1;
   width: 100%;
-  height: 100%;
 }
 .fm-component > div.title {
   background-color: #404040;
@@ -1385,6 +1384,8 @@ a.fm-panel-controlArrowRight > span {
 }
 /*浮动面板，主要用于地图上方的操作按钮*/
 .map-toolbar {
+  position: absolute;
+  z-index: 1;
   background: rgba(64, 64, 64, 0.8);
   padding: 5px;
 }
@@ -1443,10 +1444,9 @@ a.fm-panel-controlArrowRight > span {
   position: fixed;
   bottom: -15px;
 }
-
 .btn-main {
-  color:white;
-  background: rgba(150,150,150,0.5);
+  color: #fff;
+  background: rgba(150, 150, 150, 0.5);
   padding: 3px 12px;
   font-size: 12px;
 }
