修改selectForRestrictoin.js，重构了线点线等的操作

--- a/scripts/components/road/tpls/attr_warninginfo_tpl/warningInfoTpl.html
+++ b/scripts/components/road/tpls/attr_warninginfo_tpl/warningInfoTpl.html
@@ -72,7 +72,10 @@
                         </div>
                     </li>
                     <li>
-                        <div ng-include="dateURL" class="muti-date" date-str='{{oridiData.timeDomain}}' style="width:100%;padding: 5px;"></div>
+                        <div ng-include="dateURL" class="muti-date" data-type="1" style="width:100%;padding: 5px;"></div>
+                    </li>
+                    <li>
+                        <div ng-include="carPopoverURL" data-type="1" style="width:100%;padding: 5px;"></div>
                     </li>
                 </ul>
             </form>
