--- a/scripts/components/poi/tpls/edit-tools/errorCheckTpl.html
+++ b/scripts/components/poi/tpls/edit-tools/errorCheckTpl.html
@@ -33,8 +33,8 @@
                 <td>
                     <div title="{{row.information}}">{{row.shortInfo}}</div>
                 </td>
-                <td width="11%">
-                    <div>{{row.create_date}}</div>
+                <td width="5%">
+                    <div>{{row.create_date.substr(0,10)}}</div>
                 </td>
                 <td width="47">
                     <div>{{row.worker}}</div>
