--- a/scripts/components/road/tpls/attr_warninginfo_tpl/warningInfoTpl.html
+++ b/scripts/components/road/tpls/attr_warninginfo_tpl/warningInfoTpl.html
@@ -13,13 +13,13 @@
                     <li>
                         <label>进入线</label>
                         <div >
-                            <input type="text" class="fm-control" ng-model="rdWarningInfoObj.linkPid"/>
+                            <input type="text" readonly class="fm-control" ng-model="rdWarningInfoObj.linkPid"/>
                         </div>
                     </li>
                     <li>
                         <label>进入点</label>
                         <div>
-                            <input type="text" class="fm-control" ng-model="rdWarningInfoObj.nodePid"/>
+                            <input type="text" readonly class="fm-control" ng-model="rdWarningInfoObj.nodePid"/>
                         </div>
                     </li>
                     <li>
