--- a/scripts/components/road/tpls/log_show_tpl/errorCheckTpl.html
+++ b/scripts/components/road/tpls/log_show_tpl/errorCheckTpl.html
@@ -67,7 +67,7 @@
     <table st-table="rowCollection" id="errorTable" class="table table-striped" style="height:38px;margin-top: -38px;margin-bottom: 0px;">
         <thead>
         <tr>
-            <td style="width:90px;">检查规则号</td>
+            <td style="width:90px;">检查规则</td>
             <!--<td style="width:40px;">类型</td>-->
             <td style="width:70px;">错误等级</td>
             <td style="width:70px;">错误对象</td>
