--- a/scripts/components/road/tpls/attr_warninginfo_tpl/warningInfoTpl.html
+++ b/scripts/components/road/tpls/attr_warninginfo_tpl/warningInfoTpl.html
@@ -5,7 +5,7 @@
             <span class="label label-info">12345</span>
         </div>
         <div style="text-align: center;">
-            <img src="../../../images/road/1301/1301_0_0.svg" style="height: 100px;width: 140px;">
+            <img src="../../../images/road/warningInfo/{{typeCodeImg}}.svg" style="height: 100px;width: 140px;">
         </div>
         <div class="content">
             <form>
