修改电子眼移动点和增加配对

--- a/less/editor-road.less
+++ b/less/editor-road.less
@@ -701,6 +701,11 @@
         transition: all 0.5s;
         margin-right: -10px;
     }
+    .d-box-title{
+        padding-left: 10px;
+        padding-top: 5px;
+        font-weight: bold;
+    }
     .d-name {
         float: left;
         width: 30%;
@@ -966,6 +971,13 @@
 
     .d-title {
         float: left;
+    }
+    .d-title-icon {
+        position: relative;
+        right: 5px;
+        top: -18px;
+        cursor: pointer;
+        float: right;
     }
     .d-radio-btn > label {
         height: 20px !important;
