--- a/styles/imeep/editor-road.css
+++ b/styles/imeep/editor-road.css
@@ -611,6 +611,11 @@
   transition: all 0.5s;
   margin-right: -10px;
 }
+.blackTheme .d-box-title {
+  padding-left: 10px;
+  padding-top: 5px;
+  font-weight: bold;
+}
 .blackTheme .d-name {
   float: left;
   width: 30%;
@@ -854,6 +859,13 @@
 }
 .blackTheme .d-title {
   float: left;
+}
+.blackTheme .d-title-icon {
+  position: relative;
+  right: 5px;
+  top: -18px;
+  cursor: pointer;
+  float: right;
 }
 .blackTheme .d-radio-btn > label {
   height: 20px !important;
