配对关系显示

--- a/scripts/components/road/tpls/attr_electronic_tpl/electronicEyeTpl.html
+++ b/scripts/components/road/tpls/attr_electronic_tpl/electronicEyeTpl.html
@@ -113,7 +113,7 @@
                 </ul>
             </div>
         </div>
-        <div class="fm-panel" ng-if="electronicEyeData.parts.length == 0">
+        <div class="fm-panel" ng-if="electronicEyeData.parts.length != 0">
             <div class="d-box-title">配对关系</div>
             <span class="d-title-icon" ng-click="deletePairBond();">
                 <i class="glyphicon glyphicon-remove-sign"></i>
