--- a/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
@@ -54,7 +54,7 @@
                 <button type="button" class="btn btx-xs btn-feat" ng-class="{'BRANCH_SIGNASREAL':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('BRANCH_SIGNASREAL')">实景看板</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'TRAFFIC_SIGNAL':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('TRAFFIC_SIGNAL')">信号灯</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'RD_GATE':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('RD_GATE')">大门</button>
-                <button type="button" class="btn btn-xs btn-feat" ng-class="{'RD_GATE':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('RD_WARNINGINFO')">警示信息</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'RD_WARNINGINFO':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('RD_WARNINGINFO')">警示信息</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'ELECTRONIC_EYE':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('ELECTRONIC_EYE')">电子眼</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDSLOPE':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('RDSLOPE')">坡度</button>
             </li>
